# url-shortener

./: .env.kafka  .gitignore  Makefile  README.md  docker-compose.yml
analytics_service/: Dockerfile  pyproject.toml  requirements.txt
analytics_service/app/: main.py  settings.py
envoy_dev/: envoy.yaml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte
frontend/src/lib/: CreateUrlCard.svelte  UrlShortenerCard.svelte
k8s/: analytics-consumer-deployment.yml  analytics-deployment.yml  analytics-producer-deployment.yml  ingress.yml  kafka-overrides.yml  urls-deployment.yml
new_analytics_service/: consumer.Dockerfile  go.mod  go.sum  producer.Dockerfile
new_analytics_service/cmd/consumer/: main.go
new_analytics_service/cmd/producer/: main.go
new_analytics_service/cmd/server/: main.go
new_analytics_service/internal/app/: producer_app.go
new_analytics_service/internal/handlers/: handlers.go
new_analytics_service/internal/models/: models.go
new_analytics_service/internal/repository/: postgres.go  repository.go
new_analytics_service/internal/service/: service.go
nginx/: nginx.conf
nginx_dev/: nginx.conf
nginx_gateway/: nginx.conf
openresty/: Dockerfile  nginx.conf
postgres/: init.sql
scripts/: initiate-replica.sh
urls_service/: .env.local.example  Dockerfile  pyproject.toml  requirements.txt
urls_service/app/: cache.py  database.py  main.py  schemas.py  settings.py  utils.py
