[tool.poetry]
name = "analytics-service"
version = "0.1.0"
description = ""
authors = ["Cooper Weiser"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
influxdb-client = "^1.48.0"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"


[tool.poetry.group.dev.dependencies]
setuptools = "^75.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
